; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_push.c_advise_ref_fetch_first.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_push.c_advise_ref_fetch_first.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@advice_push_fetch_first = common dso_local global i32 0, align 4
@advice_push_update_rejected = common dso_local global i32 0, align 4
@message_advice_ref_fetch_first = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @advise_ref_fetch_first to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @advise_ref_fetch_first() #0 {
  %1 = load i32, i32* @advice_push_fetch_first, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32, i32* @advice_push_update_rejected, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %7, label %6

6:                                                ; preds = %3, %0
  br label %11

7:                                                ; preds = %3
  %8 = load i32, i32* @message_advice_ref_fetch_first, align 4
  %9 = call i32 @_(i32 %8)
  %10 = call i32 @advise(i32 %9)
  br label %11

11:                                               ; preds = %7, %6
  ret void
}

declare dso_local i32 @advise(i32) #1

declare dso_local i32 @_(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
